--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "rollbar-test",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,14 +12,24 @@
   "dependencies": {
     "@types/jest": "^27.0.2",
     "@types/selenium-webdriver": "^4.0.16",
-    "chromedriver": "^95.0.0",
+    "chromedriver": "^108.0.0",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "geckodriver": "^2.0.4",
     "jest": "^27.3.1",
-    "rollbar": "^2.24.0",
+    "rollbar": "^2.26.0",
     "selenium-webdriver": "^4.0.0",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HuliKos/week6Assessment.git"
+  },
+  "bugs": {
+    "url": "https://github.com/HuliKos/week6Assessment/issues"
+  },
+  "homepage": "https://github.com/HuliKos/week6Assessment#readme",
+  "description": ""
 }
